# earthmind-near-client

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  key-file.json
earthmind_client_near/: output.md
earthmind_client_near/tests/: test_contract.rs
src/: block_streamer.rs  cli.rs  constants.rs  database.rs  main.rs  models.rs  nonce_manager.rs  qx_builder.rs  qx_sender.rs  tx_builder.rs  tx_sender.rs
src/clients/: client.rs  client_trait.rs  mod.rs  open-ai_client.rs
src/processors/: aggregator.rs  miner.rs  mod.rs  transaction_processor.rs  utils.rs  validator.rs
tests/: test_contract.rs
