[package]
name = "earthmind_client_near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.1.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
near-jsonrpc-client = "0.10.1"
near-primitives = ">0.22,<0.24"
rocksdb = "0.22.0"
clap = { version = "4.5.9", features = ["derive"] }
near-crypto = "0.23.0"
serde = "1.0.204"
near-jsonrpc-primitives = "0.23.0"
async-trait = "0.1"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
hex = "0.4"
anyhow = "1.0"


[[bin]]
name = "earthmind_client_near"
path = "src/main.rs"
